# merge-mining-monitor

./: .env.example  .gitignore  .jscpd.json  .jscpd.www.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  clippy.toml  compose.yaml  justfile  package-lock.json  package.json  playwright.config.js
.github/workflows/: ci.yml
crates/merge-mining-monitor/: Cargo.toml
crates/merge-mining-monitor/src/: lib.rs  main.rs
crates/merge-mining-monitor/tests/: api_db_integration.rs  api_fixture_contract.rs  api_serve.rs  db_integration.rs
crates/merge-mining-monitor/tests/api_db_integration/: anchor_tree.rs  blocks.rs  branches.rs  chain_endpoints.rs  helpers.rs  orphans.rs  sources.rs  stales.rs  sync_core.rs  tree_sync.rs  tree_window.rs
crates/merge-mining-monitor/tests/db_integration/: elastos.rs  event_pool_attribution.rs  fractal_reward.rs  hathor.rs  hathor_reward_replay.rs  historical_ingest.rs  mutation.rs  orphan_classification.rs  poller.rs  reclassify_pools.rs  reconcile_core.rs  reconcile_repair.rs  rsk.rs  rsk_miner_identities.rs  source_health.rs
crates/merge-mining-monitor/tests/support/: db.rs  mod.rs  scenario.rs  seed.rs
crates/mmm-api/: Cargo.toml  README.md
crates/mmm-api/src/: envelope.rs  error.rs  handlers.rs  lib.rs  normalize.rs  version.rs
crates/mmm-api/src/projection/: branch_summary.rs  materialize.rs  mod.rs  stale_navigation.rs
crates/mmm-api/src/projection/block/: detail.rs  loaders.rs  mod.rs
crates/mmm-api/src/projection/navigator/: mod.rs  orphan.rs  stale.rs
crates/mmm-api/src/projection/shared/: backbone.rs  mod.rs
crates/mmm-api/src/projection/sources/: mod.rs  sync_status.rs
crates/mmm-api/src/projection/tree/: anchor.rs  build.rs  compact.rs  mod.rs  orphan_component.rs  reduction.rs  window.rs
crates/mmm-api/src/query/: mod.rs  navigator.rs  params.rs  tests.rs
crates/mmm-bitcoin-core/: Cargo.toml
crates/mmm-bitcoin-core/src/: bitcoin_rpc.rs  lib.rs
crates/mmm-bitcoin-core/src/parent_classifier/: core.rs  fake.rs  mod.rs  tests.rs
crates/mmm-capture/: Cargo.toml  README.md
crates/mmm-capture/src/: attribution_policy.rs  btc_orphan.rs  child_payout.rs  core_coinbase.rs  identity_registry.rs  lib.rs  nbits_table.rs  pool_snapshot_gen.rs  test_support.rs
crates/mmm-capture/src/auxpow/: decode.rs  mod.rs  reader.rs  tests.rs  verify.rs
crates/mmm-capture/src/capture/: mod.rs  sidecars.rs
crates/mmm-capture/src/pool_resolver/: btc.rs  error.rs  identity.rs  mod.rs
crates/mmm-capture/src/source_registry/: generate.rs  mod.rs
crates/mmm-capture/tests/: namecoin_capture.rs  syscoin_capture.rs
crates/mmm-pg/: Cargo.toml
crates/mmm-pg/src/: lib.rs
crates/mmm-producers/: Cargo.toml  README.md
crates/mmm-producers/src/: lib.rs  live_loop.rs  producer_runtime.rs
crates/mmm-producers/src/bitcoin_core_backbone/: integrity.rs  live.rs  live_config.rs  live_window.rs  mod.rs
crates/mmm-producers/src/chains/: auxpow_family.rs  backfill.rs  bitcoind_rpc.rs  child_payout_registry.rs  config.rs  mod.rs  nbits_horizon.rs  spec.rs
crates/mmm-producers/src/chains/elastos/: backfill.rs  capture.rs  identity.rs  identity_reresolve.rs  mod.rs  rpc.rs
crates/mmm-producers/src/chains/hathor/: address.rs  auxpow.rs  backfill.rs  cache.rs  capture.rs  convert.rs  drain.rs  identity.rs  mod.rs  reconstruct.rs  reward.rs  reward_replay.rs  rpc.rs
crates/mmm-producers/src/chains/rsk/: backfill.rs  capture.rs  identity_reresolve.rs  mod.rs  rpc.rs  test_fixtures.rs  traverse.rs
crates/mmm-producers/src/historical_ingest/: config.rs  csv_source.rs  mod.rs  runner.rs
crates/mmm-producers/src/poller/: mod.rs  tests.rs
crates/mmm-producers/src/reclassify_pools/: mod.rs  plan.rs
crates/mmm-read-model/: Cargo.toml
crates/mmm-read-model/src/: classify.rs  cli_args.rs  competition.rs  lib.rs  mutation.rs  queries.rs  reconcile.rs  source_health_sql.rs  writers.rs
crates/mmm-rpc/: Cargo.toml
crates/mmm-rpc/src/: lib.rs
crates/mmm-store/: Cargo.toml  README.md
crates/mmm-store/src/: event.rs  lib.rs  pending_reconcile.rs  poll_cursor.rs  pool.rs
crates/mmm-store/src/chains/: elastos.rs  hathor.rs  mod.rs  rsk.rs
data/: README.md
data/consensus/: btc_nbits_by_epoch.json
data/historical/: historical-source-manifest.json  historical-source-manifest.sha256
data/pools/: README.md  current.json  slug-map.json
data/sources/: chain_profiles.json
docs/: README.md  api-contract.md  architecture.md  attribution.md  capture.md  configuration.md  data-model.md  historical-ingest.md  operations.md  product-brief.md  release-versioning.md  testing.md  tree-semantics.md  ui-model.md
e2e/: source-status.spec.js  tree-interactions.spec.js  tree-lookup.spec.js
e2e/support/: api-stubs.js
fixtures/api/: block-multi-block-stale-branch.json  block-one-block-stale.json  block-rsk-near.json  block-rsk-uncle-near.json  block-stale-rsk-inferred.json  error-backbone-conflict.json  error-backbone-unsynced.json  error-invalid-hash.json  error-invalid-query.json  error-not-found.json  error-range-too-large.json  error-unsupported-source.json  manifest.json  navigator-orphan-branch.json  navigator-orphan.json  navigator-stale-branch.json  navigator-stale.json  sources.json  tree-unheighted-anchor.json  tree.json  version.json
fixtures/elastos/: ela-100000.json  ela-1500000.json  ela-2000000.json  ela-2232276.json  ela-2243660.json  ela-360062-auxpow.hex  ela-360062-child-header.hex  ela-360062.json
fixtures/fractal/: fb-1342257-getblockheader-auxpow.hex  fb-1824355-getblockheader-auxpow.hex
fixtures/hathor/: 1971823.json  2773476.json  3261131.json  4482931.json  5249647.json  6342295.json
fixtures/namecoin/: 019199-non-auxpow.expected.json  500000-valid-parent.expected.json  README.md  (+3 more)
migrations/: 0001_canonical_schema.sql  0002_seed_sources.sql  0003_add_elcash_source.sql  0004_remove_mazacoin_source.sql  README.md
scripts/: arch-lint.sh  gen-historical-source-manifest.sh  gen-nbits-table.py  live-test-deployment.sh  migrate-safe.sh  test-historical-source-manifest.sh
www/: index.html
(+47 files in other folders)
