[package]
name = "mmm-pg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Postgres connection configuration for the merge-mining monitor."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
