[package]
name = "mmm-read-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sole writer of the merge-mining monitor's derived read-model tables, reachable only through the mutation entry points."

[lints]
workspace = true

[features]
db-integration = []

[dependencies]
mmm-bitcoin-core.workspace = true
mmm-capture.workspace = true
mmm-pg.workspace = true
mmm-store.workspace = true
anyhow.workspace = true
bitcoin.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
