[package]
name = "mmm-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared HTTP JSON-RPC transport and envelope policy for the merge-mining monitor's child-chain clients."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
